--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-tooltip": "^5.28.0"
