--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.2",
     "qrcode.react": "^4.2.0",
