chore: fix and order imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "~/*": ["./*"],
+      "~qr/*": ["./app/utils/qr/*"]
     }
   },
   "include": [
