--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
