--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
